--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@vetlin/mysql-mutation",
     "version": "1.3.0",
-    "description": "Removes all spaces from a string",
+    "description": "Keep your database cleen",
     "author": {
         "name": "Vitaliy Linevich",
         "url": "https://github.com/Vetlin"
