--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
         "mutations"
     ],
     "dependencies": {
-        "mysql": "^2.17.1",
+        "mysql2": "^1.7.0",
         "chalk": "2.4.2"
     },
     "files": [
