--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@vetlin/mysql-mutation",
-    "version": "1.4.0",
+    "version": "1.5.0",
     "description": "Keep your database cleen",
     "author": {
         "name": "Vitaliy Linevich",
@@ -15,7 +15,9 @@
         "package",
         "vetlin",
         "mutation",
-        "mutations"
+        "mutations",
+        "mysql-mutation",
+        "mysql-mutations"
     ],
     "dependencies": {
         "mysql2": "^1.7.0",
@@ -23,9 +25,9 @@
     },
     "files": [
         "index.js",
-        "mutation.js"
-    ],
-    "scripts": {
-        "mutation": "node index.js"
-    }
+        "bin/db.js",
+        "bin/debug.js",
+        "bin/model.js",
+        "bin/validator.js"
+    ]
 }
